packages/frontend/src/components/validators/ValidatorsList.scss
@use '../../styles/mixins.scss';
@import '../../styles/variables.scss';

.ValidatorsList {
  &__ColumnTitles {
    @include mixins.defListTitles;
    display: grid;
    grid-template-columns: minmax(0, 40rem) 150px 250px 250px 150px;
    justify-content: space-between;
  }

  &__ColumnTitle {
    justify-content: flex-start;

    &:last-child {
      justify-content: flex-end;
    }
  }
  
  @media screen and (max-width: $breakpoint-lg) {
    &__ColumnTitles {
      grid-template-columns: minmax(0, 40rem) 170px 170px 100px 100px;
    }
  }

  @media screen and (max-width: $breakpoint-md) {
    overflow-y: auto;

    &__ContentContainer {
      width: max-content;
      min-width: 100%;
    }
  }
}

